[:has() pseudo-class] :has() selector invalidation issue with toggling :checked https://bugs.webkit.org/show_bug.cgi?id=234561

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/selectors/invalidation/has-pseudo-class-expected.txt: Added.
* web-platform-tests/css/selectors/invalidation/has-pseudo-class.html: Added.

Source/WebCore:

Test: imported/w3c/web-platform-tests/css/selectors/invalidation/has-pseudo-class.html

Pseudo-classes need to use Style::PseudoClassChangeInvalidation to support invalidation as :has() argument.
This patch adds it for :checked.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::parseAttribute):
(WebCore::HTMLInputElement::setChecked):
* html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::HTMLOptionElement):
(WebCore::HTMLOptionElement::matchesDefaultPseudoClass const):

Use a member for :default instead of attribute test so we can do invalidation over changing it in parseAttribute.

(WebCore::HTMLOptionElement::parseAttribute):
(WebCore::HTMLOptionElement::setSelectedState):
* html/HTMLOptionElement.h:

LayoutTests:

Results here change because we do more accurate invalidation.

* fast/css/indirect-adjacent-style-invalidation-1-expected.txt:
* fast/css/indirect-adjacent-style-invalidation-1.html:
* fast/css/indirect-adjacent-style-invalidation-2-expected.txt:
* fast/css/indirect-adjacent-style-invalidation-2.html:
* fast/css/indirect-adjacent-style-invalidation-3-expected.txt:
* fast/css/indirect-adjacent-style-invalidation-3.html:
* fast/css/pseudo-indeterminate-with-radio-buttons-style-invalidation-expected.txt:
* fast/css/pseudo-indeterminate-with-radio-buttons-style-invalidation.html:

Stop testing invalidation state for the element where :checked state changed. That is not
really the point of these tests anyway.
With accurate invalidation the result depends on plaform (iOS has :checked in UA sheet
while other platforms don't)



Canonical link: https://commits.webkit.org/245505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287363 268f45cc-cd09-0410-ab3c-d52691b4dbfc